--- a/dashboard.html
+++ b/dashboard.html
@@ -93,15 +93,22 @@
           <label for="date">Date</label>
           <input type="date" id="date" required />
         </div>
+
         <div class="input-group">
-          <label for="income">Income (₹)</label>
-          <input type="number" id="income" min="0" step="0.01" placeholder="0.00" />
+          <label for="entry-type">Type</label>
+          <select id="entry-type" required>
+            <option value="">Select type</option>
+            <option value="Income">Income</option>
+            <option value="Expense">Expense</option>
+          </select>
         </div>
+
         <div class="input-group">
-          <label for="expense">Expense (₹)</label>
-          <input type="number" id="expense" min="0" step="0.01" placeholder="0.00" />
+          <label for="amount">Amount (₹)</label>
+          <input type="number" id="amount" min="0" step="0.01" placeholder="0.00" required />
         </div>
-        <div class="input-group">
+
+        <div class="input-group" id="category-group" style="display:none;">
           <label for="category">Category</label>
           <select id="category" class="category-select">
             <option value="Other">📦 Other</option>
@@ -116,10 +123,12 @@
             <option value="Investment">📈 Investment</option>
           </select>
         </div>
+
         <div class="input-group input-group-full">
           <label for="description">Description (Optional)</label>
           <input type="text" id="description" placeholder="Enter description..." />
         </div>
+
         <button type="submit" class="add-btn">➕ Add Entry</button>
       </form>
     </section>
