--- a/dashboard.html
+++ b/dashboard.html
@@ -26,26 +26,32 @@
         <div class="header-controls">
           <button class="theme-btn" id="theme-toggle">🌙</button>
           <div class="profile-dropdown">
-            <button class="profile-btn" id="profile-btn">
+            <button class="profile-btn" id="profile-btn" aria-haspopup="true" aria-expanded="false" aria-controls="profile-menu">
               <div class="profile-avatar" id="profile-avatar"></div>
               <span class="profile-name" id="profile-name"></span>
               <span class="dropdown-arrow">▼</span>
             </button>
-            <div class="profile-menu" id="profile-menu">
-              <div class="profile-menu-header">
+            <div class="profile-menu" id="profile-menu" role="menu" aria-labelledby="profile-btn" tabindex="-1">
+              <div class="profile-menu-header" role="presentation">
                 <div class="profile-avatar-large" id="profile-avatar-large"></div>
                 <div class="profile-info">
+                  <p class="profile-name-large" id="profile-name-large"></p>
                   <p class="profile-email" id="profile-email"></p>
-                  <p class="profile-label">Account Details</p>
+                  <div class="profile-meta">
+                    <span class="profile-plan">Free</span>
+                    <span class="profile-member-since" id="profile-since" aria-hidden="true"></span>
+                  </div>
+                  </div>
                 </div>
-              </div>
               <hr class="profile-menu-divider">
-              <button class="profile-menu-item" id="change-password-btn">
-                <span>🔒</span> Change Password
+              <button class="profile-menu-item" id="change-password-btn" role="menuitem" tabindex="0">
+                <span class="icon" aria-hidden="true">🔒</span>
+                <span>Change Password</span>
               </button>
               <hr class="profile-menu-divider">
-              <button class="profile-menu-item logout" id="logout-btn">
-                <span>🚪</span> Logout
+              <button class="profile-menu-item logout" id="logout-btn" role="menuitem" tabindex="0">
+                <span class="icon" aria-hidden="true">🚪</span>
+                <span>Logout</span>
               </button>
             </div>
           </div>
@@ -207,15 +213,15 @@
             <label for="edit-date">Date</label>
             <input type="date" id="edit-date" required />
           </div>
-          <div class="input-group">
+          <div class="input-group" id="edit-income-group" style="display:none;">
             <label for="edit-income">Income (₹)</label>
             <input type="number" id="edit-income" min="0" step="0.01" />
           </div>
-          <div class="input-group">
+          <div class="input-group" id="edit-expense-group" style="display:none;">
             <label for="edit-expense">Expense (₹)</label>
             <input type="number" id="edit-expense" min="0" step="0.01" />
           </div>
-          <div class="input-group">
+          <div class="input-group" id="edit-category-group" style="display:none;">
             <label for="edit-category">Category</label>
             <select id="edit-category" class="category-select">
               <option value="Other">📦 Other</option>
